--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.10.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
